upgrade sklearn version

--- a/ml-web-app-flask.ipynb
+++ b/ml-web-app-flask.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -215,9 +215,10 @@
    "source": [
     "from pandas import read_csv\n",
     "import pandas as pd\n",
+    "import sklearn\n",
     "\n",
     "# Load the data into a pandas DataFrame\n",
-    "mushrooms_df = read_csv('/workspaces/ml-webapp-using-flask-tutorial-omass/.github/workflows/mushrooms.csv')\n",
+    "mushrooms_df = read_csv('/workspaces/ml-webapp-using-flask-tutorial-omass/mushrooms.csv')\n",
     "\n",
     "#Show the first few rows of the DataFrame\n",
     "mushrooms_df.head()"
@@ -225,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,14 +247,12 @@
     "y = mushrooms_df['class']  # Target column\n",
     "\n",
     "# Splitting the dataset into training and test sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "\n"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -368,27 +367,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model saved to decision_tree_model.joblib\n"
+      "Model saved to decision_tree_model.pkl\n"
      ]
     }
    ],
    "source": [
     "# saving the Trained Decision Tree Model\n",
     "\n",
-    "from joblib import dump\n",
+    "import pickle\n",
     "\n",
     "# Save the model to a file\n",
-    "model_filename = 'decision_tree_model.joblib'\n",
-    "dump(decision_tree, model_filename)\n",
+    "model_filename = 'decision_tree_model.pkl'\n",
+    "pickle.dump(decision_tree,open(model_filename, 'wb'))\n",
     "\n",
-    "print(f\"Model saved to {model_filename}\")\n"
+    "print(f\"Model saved to {model_filename}\")"
    ]
   }
  ],
