--- a/ml-web-app-flask.ipynb
+++ b/ml-web-app-flask.ipynb
@@ -2,7 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.2.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Cell 2a: Check scikit-learn Version\n",
+    "\n",
+    "import sklearn\n",
+    "\n",
+    "print(sklearn.__version__)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +228,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +273,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['cap-shape', 'cap-surface', 'cap-color', 'bruises', 'odor',\n",
+      "       'gill-attachment', 'gill-spacing', 'gill-size', 'gill-color',\n",
+      "       'stalk-shape', 'stalk-root', 'stalk-surface-above-ring',\n",
+      "       'stalk-surface-below-ring', 'stalk-color-above-ring',\n",
+      "       'stalk-color-below-ring', 'veil-type', 'veil-color', 'ring-number',\n",
+      "       'ring-type', 'spore-print-color', 'population', 'habitat'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(X.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +437,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
