updated features with ranges

--- a/ml-web-app-flask.ipynb
+++ b/ml-web-app-flask.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -228,7 +228,7 @@
        "[5 rows x 23 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -247,56 +247,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# transforming the categorical features into a format that can be used by our decision tree classifier. The X variable represents our features, and y is the target variable we're trying to predict\n",
-    "\n",
+    "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
-    "# Assuming mushrooms_df is your DataFrame and has been preprocessed appropriately\n",
+    "# Load the dataset\n",
+    "df = pd.read_csv('/workspaces/ml-webapp-using-flask-tutorial-omass/mushrooms.csv')\n",
+    "\n",
+    "# List of feature names (excluding the target variable 'class' if it's in the dataset)\n",
+    "features = [column for column in df.columns if column != 'class']\n",
     "\n",
     "# Encoding categorical features using LabelEncoder (if not already done)\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
     "label_encoder = LabelEncoder()\n",
-    "for column in mushrooms_df.columns:\n",
-    "    mushrooms_df[column] = label_encoder.fit_transform(mushrooms_df[column])\n",
+    "for column in df.columns:\n",
+    "    df[column] = label_encoder.fit_transform(df[column])\n",
     "\n",
     "# Splitting the data into features and labels\n",
-    "X = mushrooms_df.drop('class', axis=1)  # Dropping the target column for features\n",
-    "y = mushrooms_df['class']  # Target column\n",
+    "X = df.drop('class', axis=1)  # Features\n",
+    "y = df['class']  # Target\n",
     "\n",
     "# Splitting the dataset into training and test sets\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['cap-shape', 'cap-surface', 'cap-color', 'bruises', 'odor',\n",
-      "       'gill-attachment', 'gill-spacing', 'gill-size', 'gill-color',\n",
-      "       'stalk-shape', 'stalk-root', 'stalk-surface-above-ring',\n",
-      "       'stalk-surface-below-ring', 'stalk-color-above-ring',\n",
-      "       'stalk-color-below-ring', 'veil-type', 'veil-color', 'ring-number',\n",
-      "       'ring-type', 'spore-print-color', 'population', 'habitat'],\n",
-      "      dtype='object')\n"
+      "{'cap-shape': (0, 5), 'cap-surface': (0, 3), 'cap-color': (0, 9), 'bruises': (0, 1), 'odor': (0, 8), 'gill-attachment': (0, 1), 'gill-spacing': (0, 1), 'gill-size': (0, 1), 'gill-color': (0, 11), 'stalk-shape': (0, 1), 'stalk-root': (0, 4), 'stalk-surface-above-ring': (0, 3), 'stalk-surface-below-ring': (0, 3), 'stalk-color-above-ring': (0, 8), 'stalk-color-below-ring': (0, 8), 'veil-type': (0, 0), 'veil-color': (0, 3), 'ring-number': (0, 2), 'ring-type': (0, 4), 'spore-print-color': (0, 8), 'population': (0, 5), 'habitat': (0, 6)}\n"
      ]
     }
    ],
    "source": [
-    "print(X.columns)"
+    "# Assuming the LabelEncoder is fitted to all features\n",
+    "label_encoders = {feature: LabelEncoder().fit(df[feature]) for feature in features}\n",
+    "\n",
+    "# Determine the min and max numerical values for each feature after encoding\n",
+    "numerical_feature_ranges = {\n",
+    "    feature: (min(label_encoders[feature].transform(df[feature].unique())),\n",
+    "              max(label_encoders[feature].transform(df[feature].unique())))\n",
+    "    for feature in features\n",
+    "}\n",
+    "\n",
+    "print(numerical_feature_ranges)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
